--- a/test/storybook/docs/Testing/Behavior/Extends/extends-eval.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/extends-eval.mdx
@@ -1,7 +1,7 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import errorImg from './extends-compiler-error.png';
 
-<Meta title="Testing/Behavior/Extends/Extends Evaluation" tags={['pending-review']} />
+<Meta title="Testing/Behavior/Extends/Extends Evaluation" tags={['dev-only','pending-review']} />
 
 # Extends-Only Phase 1 Evaluation
 
